Fixes alignment issues in teachers page with added responsiveness
- Fixes Alignment issues.
- Make complete background div $gray-100 alternatively as in designs.
- remove irrelevant col bootsrap classes.

--- a/app/assets/stylesheets/logixRelease.scss
+++ b/app/assets/stylesheets/logixRelease.scss
@@ -1,6 +1,6 @@
 .feature {
   border: 1px solid $featurepostborder;
-  border-radius: .25em;
+  border-radius: 0.25em;
   padding: 1.25rem;
 }
 
@@ -54,8 +54,8 @@ a.btn.btn-outline-danger {
   color: $red;
   padding: 4px;
 
-    h2 {
-      font-size: 1.25rem;
+  h2 {
+    font-size: 1.25rem;
   }
 }
 
@@ -64,24 +64,24 @@ a.btn.btn-outline-danger {
 }
 
 @media (max-width: 992px) {
-    .pagination-cont {
-        overflow-x: auto;
-        padding: 0;
-    }
+  .pagination-cont {
+    overflow-x: auto;
+    padding: 0;
+  }
 
-    .pagination {
-        overflow-x: visible;
-        max-width: none;
-        display: block;
-        padding: 0;
-        white-space: nowrap;
-    }
+  .pagination {
+    overflow-x: visible;
+    max-width: none;
+    display: block;
+    padding: 0;
+    white-space: nowrap;
+  }
 
-    .pagination > * {
-        display: inline-block;
-        margin: 0;
-        margin-left: -4px;
-    }
+  .pagination > * {
+    display: inline-block;
+    margin: 0;
+    margin-left: -4px;
+  }
 }
 
 a.btn.btn-outline-primary {
@@ -161,7 +161,7 @@ a.btn.btn-outline-danger {
 .feature-preview {
   border: 2px solid $green;
   padding: 1.25rem;
-  border-radius: .25em;
+  border-radius: 0.25em;
 }
 
 .btn-userprojects {
@@ -229,15 +229,13 @@ a.btn.btn-outline-danger {
   margin-bottom: 20px;
 }
 
-.container-fluid_teachers{
-  padding-bottom: 40px;
-  padding-top: 40px;
+.container-fluid_teachers {
+  padding: 40px 0px;
 }
 
-.container-fluid_teachersbackground{
+.container-fluid_teachersbackground {
   background-color: $gray-100;
-  padding-bottom: 40px;
-  padding-top: 40px;
+  padding: 40px 0px;
 }
 
 .align-center {
@@ -246,7 +244,6 @@ a.btn.btn-outline-danger {
 
 .image_teachers {
   border: 1px solid $slight-gray;
-  margin-left: 20px;
   max-height: 100%;
   max-width: 100%;
 }
@@ -279,13 +276,13 @@ a.btn.btn-outline-danger {
 .feature-post {
   border: 1.5px solid $featurepostborder;
   margin-bottom: 10px;
-  padding: .6rem .4rem;
+  padding: 0.6rem 0.4rem;
 }
 
 .iframe-box {
   border: 1px solid $iframeborder;
-  border-radius: .25rem;
-  padding: .4rem;
+  border-radius: 0.25rem;
+  padding: 0.4rem;
 }
 
 .container-in {
